--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -2,7 +2,8 @@ PROG=	current-monitor
 PROJECTDIR:=$(abspath $(dir $(lastword ${MAKEFILE_LIST})))
 BOARD=${PROJECTDIR}/board
 
-SRCS=	current-monitor.c ter-u24b.c
+SRCS=	current-monitor.c display.c ter-u24b.c
+LDLIBS+=	-lm
 
 CFLAGS+= -Wall
 
