start firmware changes for r1

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -1,10 +1,11 @@
 PROG=	current-monitor
-PROJECTDIR:=$(abspath $(dir $(lastword ${MAKEFILE_LIST})))
-BOARD=${PROJECTDIR}/board
 
 SRCS=	current-monitor.c display.c ter-u24b.c
 LDLIBS+=	-lm
 
 CFLAGS+= -Wall
+
+DFUVID=2323
+DFUPID=0001
 
 include mchck-os/build/mchck.mk
